samples/_failures_safe/1761614379_4be7e2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7200d8f2.c: In function ‘main’:
./samples/SAFE/__tmp_7200d8f2.c:159:12: error: expected declaration or statement at end of input
  159 |     struct Matrix product = matrix_multiply(&a, &b);
      |            ^~~~~~
